--- a/json.html
+++ b/json.html
@@ -22,7 +22,7 @@
         
         .container {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 0;
         }
         
         .header {
