--- a/json.html
+++ b/json.html
@@ -21,14 +21,15 @@
         }
         
         .container {
-            max-width: 1200px;
+            width: 100%;
             margin: 0;
         }
         
         .header {
+            width: 100%;
             background-color: #d32f2f;
             color: white;
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             border-radius: 8px;
             margin-bottom: 20px;
