--- a/json.html
+++ b/json.html
@@ -13,7 +13,7 @@
             box-sizing: border-box;
             font-family: 'Arial', sans-serif;
         }
-        
+
         body {
             background-color: #f5f5f5;
             padding-bottom: 80px; /* Espaço para o rodapé fixo */
@@ -231,7 +231,9 @@
         <div id="products-container">
             <div class="initial-message">Selecione uma categoria para visualizar os produtos</div>
         </div>
-    </div>
+        <div class="img-logo">
+            <img src="imagens/logo2.png" alt="Logo Toca da Pizza" style="width: 100%; max-width: 300px; margin: 20px auto; display: block;">
+        </div>
 
     <!-- Rodapé fixo com ícones -->
     <footer class="footer">
