--- a/json.html
+++ b/json.html
@@ -155,7 +155,7 @@
             text-align: center;
             padding: 20px;
             font-size: 18px;
-            color: #666;
+            color: #666666;
         }
         
         .error {
@@ -168,6 +168,7 @@
             text-align: center;
             padding: 40px;
             color: #666;
+            margin: 0;
             font-size: 16px;
         }
 
@@ -232,7 +233,7 @@
             <div class="initial-message">Selecione uma categoria para visualizar os produtos</div>
         </div>
         <div class="img-logo">
-            <img src="imagens/logo2.png" alt="Logo Toca da Pizza" style="width: 100%; max-width: 300px; margin: 20px auto; display: block;">
+            <img src="imagens/logo2.png" alt="Logo Toca da Pizza" style="width: 100%; max-width: 300px; margin: 0 auto; display: block;">
         </div>
 
     <!-- Rodapé fixo com ícones -->
