--- a/json.html
+++ b/json.html
@@ -219,8 +219,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 20px auto;
-            padding: 20px;
+            margin: 0;
+            /*padding: 10px;*/
         }
 
         .img-logo img {
@@ -228,6 +228,7 @@
             width: 100%;
             height: auto;
         }
+
     </style>
 </head>
 <body>
