--- a/json.html
+++ b/json.html
@@ -262,8 +262,8 @@
                 <span>Início</span>
             </a>
             
-            <a href="#" class="footer-link">
-                <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/toca_da_pizza_mg?utm_source=qr&igsh=bGxvNnF4OGI0aXd4" class="footer-link">
+                <i class="fa-brands fa-square-instagram"></i>
                 <span>Instagram</span>
             </a>
             
