--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 <i class="fas fa-house"></i>
                 <span>Início</span>
             </a>
-            <a href="tel:+5531999999999" class="footer-link">
+            <a href="tel:031995536361" class="footer-link">
                 <i class="fas fa-phone"></i>
                 <span>Ligar</span>
             </a>
-            <a href="https://wa.me/5531999999999" class="footer-link">
+            <a href="https://wa.me/5531995536361" class="footer-link">
                 <i class="fab fa-whatsapp"></i>
                 <span>WhatsApp</span>
             </a>
