--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="imagens/logo.png" alt="Logo Toca da Pizza" class="header-logo">
                 <h1>Toca da Pizza</h1>
             </div>
-            <p>Aprecie os sabores da Toca.</p>
+            <p>Aprecie os sabores da Di Tutti.</p>
         </div>
         
         <div class="search-container">
