--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header">
             <div class="logo-title-container">
                 <img src="imagens/logo.png" alt="Logo Toca da Pizza" class="header-logo">
-                <h1>Toca da Pizza</h1>
+                <h1>Di Tutti Pizzaria</h1>
             </div>
-            <p>Aprecie os sabores da Di Tutti ex toca.</p>
+            <p>Aprecie os sabores da Di Tutti</p>
         </div>
         
         <div class="search-container">
