--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
         <div class="header">
             <div class="logo-title-container">
-                <img src="imagens/logo.png" alt="Logo Toca da Pizza" class="header-logo">
+                <img src="imagens/logo3.png" alt="Logo Toca da Pizza" class="header-logo">
                 <h1>Di Tutti Pizzaria</h1>
             </div>
-            <p>Aprecie os sabores da Di Tutti</p>
+            <p>Aprecie nossos sabores.</p>
         </div>
         
         <div class="search-container">
@@ -28,7 +28,7 @@
         </div>
         
         <div class="img-logo">
-            <img src="imagens/logo.png" alt="Logo Toca da Pizza" loading="lazy">
+            <img src="imagens/logo3.png" alt="Logo Toca da Pizza" loading="lazy">
         </div>
 
         <div class="floating-cart" id="floating-cart">
