--- a/manutencao.html
+++ b/manutencao.html
@@ -21,7 +21,7 @@
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #d32f2f;
+            color: #438a1b;
         }
         .icon {
             font-size: 50px;
