--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toca da Pizza - Cardápio Digital</title>
+    <title>Di Tutti Pizzaria - Cardápio Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="js-css/styles.css?v=1.1">
+    <link rel="stylesheet" href="js-css/styles.css?v=1">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo-title-container">
-                <img src="imagens/logo3.png" alt="Logo Toca da Pizza" class="header-logo">
+                <img src="imagens/logo3.png" alt="Logo Di Tutti" class="header-logo">
                 <h1>Di Tutti Pizzaria</h1>
             </div>
             <p>Aprecie nossos sabores.</p>
@@ -28,7 +28,7 @@
         </div>
         
         <div class="img-logo">
-            <img src="imagens/logo3.png" alt="Logo Toca da Pizza" loading="lazy">
+            <img src="imagens/logo3.png" alt="Logo Di Tutti" loading="lazy">
         </div>
 
         <div class="floating-cart" id="floating-cart">
