--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-title-container">
-                <img src="imagens/IMG-20250809-WA0008.jpg" alt="Logo Di Tutti" class="header-logo">
+                <img src="imagens/fratelli2.png" alt="Logo Di Tutti" class="header-logo">
                 <h1>Di Tutti Pizzaria</h1>
             </div>
             <p>Aprecie nossos sabores.</p>
@@ -28,7 +28,7 @@
         </div>
         
         <div class="img-logo">
-            <img src="imagens/IMG-20250809-WA0008.jpg" alt="Logo Di Tutti" loading="lazy">
+            <img src="imagens/fratelli2.png" alt="Logo Di Tutti" loading="lazy">
         </div>
 
         <div class="floating-cart" id="floating-cart">
