--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fratelli Pizzaria - Cardápio Digital</title>
+    <title>Pizzaria Fratelli - Cardápio Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="js-css/styles.css?v=1">
 </head>
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="logo-title-container">
                 <img src="imagens/fratelli2.png" alt="Logo Di Tutti" class="header-logo">
-                <h1>Fratelli Pizzaria</h1>
+                <h1>Pizzaria Fratelli</h1>
             </div>
             <p>Aprecie nossos sabores.</p>
         </div>
